// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card snapshot should always match the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    house={
        Object {
            "ancestralWeapons": Array [
              "Lady Forlorn",
            ],
            "coatOfArms": "Three black ravens in flight",
            "founded": "",
            "name": "House Corbray of Heart's Home",
            "seats": Array [
              "Heart's Home",
            ],
            "titles": Array [
              "Lord of Heart's Home",
              "King of the Fingers (historical)",
            ],
            "words": "",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="title"
>
          House:
</div>,
        <div
          className="entry"
>
          House Corbray of Heart's Home
</div>,
        <div
          className="title"
>
          Words:
</div>,
        <div
          className="entry"
/>,
        <div
          className="title"
>
          Founded:
</div>,
        <div
          className="entry"
/>,
        <div
          className="title"
>
          Coat Of Arms:
</div>,
        <div
          className="entry"
>
          Three black ravens in flight
</div>,
        <div
          className="title"
>
          Seats:
</div>,
        <div
          className="entry"
>
          <p>
                    Heart's Home
          </p>
</div>,
        <div
          className="title"
>
          Titles:
</div>,
        <div
          className="entry"
>
          <p>
                    Lord of Heart's Home
          </p>
          <p>
                    King of the Fingers (historical)
          </p>
</div>,
        <div
          className="title"
>
          Ancestral Weapons:
</div>,
        <div
          className="entry"
>
          <p>
                    Lady Forlorn
          </p>
</div>,
        <div
          className="swornMembers"
>
          <button
                    onClick={[Function]}
          >
                    Show Sworn Members
          </button>
</div>,
      ],
      "className": "card",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": "House:",
          "className": "title",
        },
        "ref": null,
        "rendered": "House:",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": "House Corbray of Heart's Home",
          "className": "entry",
        },
        "ref": null,
        "rendered": "House Corbray of Heart's Home",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": "Words:",
          "className": "title",
        },
        "ref": null,
        "rendered": "Words:",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": "",
          "className": "entry",
        },
        "ref": null,
        "rendered": "",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": "Founded:",
          "className": "title",
        },
        "ref": null,
        "rendered": "Founded:",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": "",
          "className": "entry",
        },
        "ref": null,
        "rendered": "",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": "Coat Of Arms:",
          "className": "title",
        },
        "ref": null,
        "rendered": "Coat Of Arms:",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": "Three black ravens in flight",
          "className": "entry",
        },
        "ref": null,
        "rendered": "Three black ravens in flight",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": "Seats:",
          "className": "title",
        },
        "ref": null,
        "rendered": "Seats:",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p>
              Heart's Home
</p>,
          ],
          "className": "entry",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "Heart's Home",
            "nodeType": "host",
            "props": Object {
              "children": "Heart's Home",
            },
            "ref": null,
            "rendered": "Heart's Home",
            "type": "p",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": "Titles:",
          "className": "title",
        },
        "ref": null,
        "rendered": "Titles:",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p>
              Lord of Heart's Home
</p>,
            <p>
              King of the Fingers (historical)
</p>,
          ],
          "className": "entry",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "Lord of Heart's Home",
            "nodeType": "host",
            "props": Object {
              "children": "Lord of Heart's Home",
            },
            "ref": null,
            "rendered": "Lord of Heart's Home",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": "King of the Fingers (historical)",
            "nodeType": "host",
            "props": Object {
              "children": "King of the Fingers (historical)",
            },
            "ref": null,
            "rendered": "King of the Fingers (historical)",
            "type": "p",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": "Ancestral Weapons:",
          "className": "title",
        },
        "ref": null,
        "rendered": "Ancestral Weapons:",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p>
              Lady Forlorn
</p>,
          ],
          "className": "entry",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "Lady Forlorn",
            "nodeType": "host",
            "props": Object {
              "children": "Lady Forlorn",
            },
            "ref": null,
            "rendered": "Lady Forlorn",
            "type": "p",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <button
              onClick={[Function]}
>
              Show Sworn Members
</button>,
            Array [],
          ],
          "className": "swornMembers",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": "Show Sworn Members",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "Show Sworn Members",
            "type": "button",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="title"
>
            House:
</div>,
          <div
            className="entry"
>
            House Corbray of Heart's Home
</div>,
          <div
            className="title"
>
            Words:
</div>,
          <div
            className="entry"
/>,
          <div
            className="title"
>
            Founded:
</div>,
          <div
            className="entry"
/>,
          <div
            className="title"
>
            Coat Of Arms:
</div>,
          <div
            className="entry"
>
            Three black ravens in flight
</div>,
          <div
            className="title"
>
            Seats:
</div>,
          <div
            className="entry"
>
            <p>
                        Heart's Home
            </p>
</div>,
          <div
            className="title"
>
            Titles:
</div>,
          <div
            className="entry"
>
            <p>
                        Lord of Heart's Home
            </p>
            <p>
                        King of the Fingers (historical)
            </p>
</div>,
          <div
            className="title"
>
            Ancestral Weapons:
</div>,
          <div
            className="entry"
>
            <p>
                        Lady Forlorn
            </p>
</div>,
          <div
            className="swornMembers"
>
            <button
                        onClick={[Function]}
            >
                        Show Sworn Members
            </button>
</div>,
        ],
        "className": "card",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "House:",
            "className": "title",
          },
          "ref": null,
          "rendered": "House:",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "House Corbray of Heart's Home",
            "className": "entry",
          },
          "ref": null,
          "rendered": "House Corbray of Heart's Home",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "Words:",
            "className": "title",
          },
          "ref": null,
          "rendered": "Words:",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "",
            "className": "entry",
          },
          "ref": null,
          "rendered": "",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "Founded:",
            "className": "title",
          },
          "ref": null,
          "rendered": "Founded:",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "",
            "className": "entry",
          },
          "ref": null,
          "rendered": "",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "Coat Of Arms:",
            "className": "title",
          },
          "ref": null,
          "rendered": "Coat Of Arms:",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "Three black ravens in flight",
            "className": "entry",
          },
          "ref": null,
          "rendered": "Three black ravens in flight",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "Seats:",
            "className": "title",
          },
          "ref": null,
          "rendered": "Seats:",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p>
                Heart's Home
</p>,
            ],
            "className": "entry",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "Heart's Home",
              "nodeType": "host",
              "props": Object {
                "children": "Heart's Home",
              },
              "ref": null,
              "rendered": "Heart's Home",
              "type": "p",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "Titles:",
            "className": "title",
          },
          "ref": null,
          "rendered": "Titles:",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p>
                Lord of Heart's Home
</p>,
              <p>
                King of the Fingers (historical)
</p>,
            ],
            "className": "entry",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "Lord of Heart's Home",
              "nodeType": "host",
              "props": Object {
                "children": "Lord of Heart's Home",
              },
              "ref": null,
              "rendered": "Lord of Heart's Home",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": "King of the Fingers (historical)",
              "nodeType": "host",
              "props": Object {
                "children": "King of the Fingers (historical)",
              },
              "ref": null,
              "rendered": "King of the Fingers (historical)",
              "type": "p",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "Ancestral Weapons:",
            "className": "title",
          },
          "ref": null,
          "rendered": "Ancestral Weapons:",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p>
                Lady Forlorn
</p>,
            ],
            "className": "entry",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "Lady Forlorn",
              "nodeType": "host",
              "props": Object {
                "children": "Lady Forlorn",
              },
              "ref": null,
              "rendered": "Lady Forlorn",
              "type": "p",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <button
                onClick={[Function]}
>
                Show Sworn Members
</button>,
              Array [],
            ],
            "className": "swornMembers",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": "Show Sworn Members",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "Show Sworn Members",
              "type": "button",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Card snapshot should have display sworn members 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    house={
        Object {
            "ancestralWeapons": Array [
              "Lady Forlorn",
            ],
            "coatOfArms": "Three black ravens in flight",
            "founded": "",
            "name": "House Corbray of Heart's Home",
            "seats": Array [
              "Heart's Home",
            ],
            "swornMembers": Array [
              "https://www.anapioficeandfire.com/api/characters/1182",
            ],
            "titles": Array [
              "Lord of Heart's Home",
              "King of the Fingers (historical)",
            ],
            "words": "",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="title"
>
          House:
</div>,
        <div
          className="entry"
>
          House Corbray of Heart's Home
</div>,
        <div
          className="title"
>
          Words:
</div>,
        <div
          className="entry"
/>,
        <div
          className="title"
>
          Founded:
</div>,
        <div
          className="entry"
/>,
        <div
          className="title"
>
          Coat Of Arms:
</div>,
        <div
          className="entry"
>
          Three black ravens in flight
</div>,
        <div
          className="title"
>
          Seats:
</div>,
        <div
          className="entry"
>
          <p>
                    Heart's Home
          </p>
</div>,
        <div
          className="title"
>
          Titles:
</div>,
        <div
          className="entry"
>
          <p>
                    Lord of Heart's Home
          </p>
          <p>
                    King of the Fingers (historical)
          </p>
</div>,
        <div
          className="title"
>
          Ancestral Weapons:
</div>,
        <div
          className="entry"
>
          <p>
                    Lady Forlorn
          </p>
</div>,
        <div
          className="swornMembers"
>
          <button
                    onClick={[Function]}
          >
                    Show Sworn Members
          </button>
</div>,
      ],
      "className": "card",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": "House:",
          "className": "title",
        },
        "ref": null,
        "rendered": "House:",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": "House Corbray of Heart's Home",
          "className": "entry",
        },
        "ref": null,
        "rendered": "House Corbray of Heart's Home",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": "Words:",
          "className": "title",
        },
        "ref": null,
        "rendered": "Words:",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": "",
          "className": "entry",
        },
        "ref": null,
        "rendered": "",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": "Founded:",
          "className": "title",
        },
        "ref": null,
        "rendered": "Founded:",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": "",
          "className": "entry",
        },
        "ref": null,
        "rendered": "",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": "Coat Of Arms:",
          "className": "title",
        },
        "ref": null,
        "rendered": "Coat Of Arms:",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": "Three black ravens in flight",
          "className": "entry",
        },
        "ref": null,
        "rendered": "Three black ravens in flight",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": "Seats:",
          "className": "title",
        },
        "ref": null,
        "rendered": "Seats:",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p>
              Heart's Home
</p>,
          ],
          "className": "entry",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "Heart's Home",
            "nodeType": "host",
            "props": Object {
              "children": "Heart's Home",
            },
            "ref": null,
            "rendered": "Heart's Home",
            "type": "p",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": "Titles:",
          "className": "title",
        },
        "ref": null,
        "rendered": "Titles:",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p>
              Lord of Heart's Home
</p>,
            <p>
              King of the Fingers (historical)
</p>,
          ],
          "className": "entry",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "Lord of Heart's Home",
            "nodeType": "host",
            "props": Object {
              "children": "Lord of Heart's Home",
            },
            "ref": null,
            "rendered": "Lord of Heart's Home",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": "King of the Fingers (historical)",
            "nodeType": "host",
            "props": Object {
              "children": "King of the Fingers (historical)",
            },
            "ref": null,
            "rendered": "King of the Fingers (historical)",
            "type": "p",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": "Ancestral Weapons:",
          "className": "title",
        },
        "ref": null,
        "rendered": "Ancestral Weapons:",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p>
              Lady Forlorn
</p>,
          ],
          "className": "entry",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "Lady Forlorn",
            "nodeType": "host",
            "props": Object {
              "children": "Lady Forlorn",
            },
            "ref": null,
            "rendered": "Lady Forlorn",
            "type": "p",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <button
              onClick={[Function]}
>
              Show Sworn Members
</button>,
            Array [],
          ],
          "className": "swornMembers",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": "Show Sworn Members",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "Show Sworn Members",
            "type": "button",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="title"
>
            House:
</div>,
          <div
            className="entry"
>
            House Corbray of Heart's Home
</div>,
          <div
            className="title"
>
            Words:
</div>,
          <div
            className="entry"
/>,
          <div
            className="title"
>
            Founded:
</div>,
          <div
            className="entry"
/>,
          <div
            className="title"
>
            Coat Of Arms:
</div>,
          <div
            className="entry"
>
            Three black ravens in flight
</div>,
          <div
            className="title"
>
            Seats:
</div>,
          <div
            className="entry"
>
            <p>
                        Heart's Home
            </p>
</div>,
          <div
            className="title"
>
            Titles:
</div>,
          <div
            className="entry"
>
            <p>
                        Lord of Heart's Home
            </p>
            <p>
                        King of the Fingers (historical)
            </p>
</div>,
          <div
            className="title"
>
            Ancestral Weapons:
</div>,
          <div
            className="entry"
>
            <p>
                        Lady Forlorn
            </p>
</div>,
          <div
            className="swornMembers"
>
            <button
                        onClick={[Function]}
            >
                        Show Sworn Members
            </button>
</div>,
        ],
        "className": "card",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "House:",
            "className": "title",
          },
          "ref": null,
          "rendered": "House:",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "House Corbray of Heart's Home",
            "className": "entry",
          },
          "ref": null,
          "rendered": "House Corbray of Heart's Home",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "Words:",
            "className": "title",
          },
          "ref": null,
          "rendered": "Words:",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "",
            "className": "entry",
          },
          "ref": null,
          "rendered": "",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "Founded:",
            "className": "title",
          },
          "ref": null,
          "rendered": "Founded:",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "",
            "className": "entry",
          },
          "ref": null,
          "rendered": "",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "Coat Of Arms:",
            "className": "title",
          },
          "ref": null,
          "rendered": "Coat Of Arms:",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "Three black ravens in flight",
            "className": "entry",
          },
          "ref": null,
          "rendered": "Three black ravens in flight",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "Seats:",
            "className": "title",
          },
          "ref": null,
          "rendered": "Seats:",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p>
                Heart's Home
</p>,
            ],
            "className": "entry",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "Heart's Home",
              "nodeType": "host",
              "props": Object {
                "children": "Heart's Home",
              },
              "ref": null,
              "rendered": "Heart's Home",
              "type": "p",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "Titles:",
            "className": "title",
          },
          "ref": null,
          "rendered": "Titles:",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p>
                Lord of Heart's Home
</p>,
              <p>
                King of the Fingers (historical)
</p>,
            ],
            "className": "entry",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "Lord of Heart's Home",
              "nodeType": "host",
              "props": Object {
                "children": "Lord of Heart's Home",
              },
              "ref": null,
              "rendered": "Lord of Heart's Home",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": "King of the Fingers (historical)",
              "nodeType": "host",
              "props": Object {
                "children": "King of the Fingers (historical)",
              },
              "ref": null,
              "rendered": "King of the Fingers (historical)",
              "type": "p",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "Ancestral Weapons:",
            "className": "title",
          },
          "ref": null,
          "rendered": "Ancestral Weapons:",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p>
                Lady Forlorn
</p>,
            ],
            "className": "entry",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "Lady Forlorn",
              "nodeType": "host",
              "props": Object {
                "children": "Lady Forlorn",
              },
              "ref": null,
              "rendered": "Lady Forlorn",
              "type": "p",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <button
                onClick={[Function]}
>
                Show Sworn Members
</button>,
              Array [],
            ],
            "className": "swornMembers",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": "Show Sworn Members",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "Show Sworn Members",
              "type": "button",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
